# miniproject

./: LICENSE  README.md  db.json  db.test.json  log.html  output.xml  package-lock.json  package.json  pyproject.toml  report.html  retro.md
coverage/: clover.xml  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/src/: App.jsx.html  index.html  main.jsx.html
coverage/lcov-report/src/components/: doi.jsx.html  index.html  lisaa.jsx.html  lisaaKirja.jsx.html  lisaaYhdArtikkeli.jsx.html
src/: App.jsx  filter1.test.js  filter2.test.js  tallennus.test.js  tulostus.test.js
src/components/: doi.jsx  doi.test.js  lisaa.jsx  lisaa.test.js  lisaaKirja.jsx  lisaaKirja.test.js  lisaaYhdArtikkeli.jsx
src/tests/: lisays.robot  tallennus.robot  tulostus.robot
