[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["lehtio <laura.l.lehtio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.3.0"
webdriver-manager = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
